--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,15 @@ Note to self: Don't forget to tag the version after a new distribution
 is released.  For example: `cvs tag -Rc v1_00 .'
 
 ---------------
+0.34 2000.09.02
+---------------
+
+On crysflame's recommendation, I moved the HTTP.pm file out of
+POE/Component/Client and added a PM directive to Makefile.PL.  Now
+HTTP.pm gets installed.  Fixed the MANIFEST and cleaned up Makefile.PL
+a little while I was in there.
+
+---------------
 0.33 2000.09.01
 ---------------
 
