--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,13 @@ Note to self: Don't forget to tag the version after a new distribution
 is released.  For example: `cvs tag -Rc v1_00 .'
 
 ---------------
+0.35 2000.09.20
+---------------
+
+Added cookies support, and documented the CookieJar parameter for
+PoCo::Client::HTTP->spawn().
+
+---------------
 0.34 2000.09.02
 ---------------
 
