--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,14 @@ Note to self: Don't forget to tag the version after a new distribution
 is released.  For example: `cvs tag -Rc v1_00 .'
 
 ---------------
+0.37 2001.10.15
+---------------
+
+Add a MaxSize parameter to the Component's constructor.  When used, it
+can prevent the world from blowing up when someone hands you
+<http://localhost:19/>.
+
+---------------
 0.36 2001.05.29
 ---------------
 
