--- a/README
+++ b/README
@@ -6,9 +6,8 @@ Abstract
 
 POE::Component::Client::HTTP is an asynchronous, event driven HTTP
 user agent.  It accepts events containing HTTP::Request objects, and
-it returns events carrying HTTP::Response objects.  It supports
-several simultaneous HTTP transactions from an arbitrary number of
-other sessions.
+it returns events carrying HTTP::Response objects.  It supports https
+and simultaneous HTTP transactions.
 
 ------------
 Requirements
@@ -22,6 +21,8 @@ This module requires POE, HTTP::Request, and HTTP::Response.  The
 requirements are encoded in Makefile.PL, so the CPAN shell should do
 the right thing.  If this is installed without the CPAN shell, the
 person installing it will have to do the right thing manually.
+
+SSL (https) support requires Net::SSLeay::Handle.
 
 ------------------
 Basic Installation
